--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -71,7 +71,7 @@
                     </a>
                 </div>
             </div>
-            <p class="copyright">© {{ now.year }} uptrix.io</p>
+            <p class="copyright">© {{ now.year }} uptrixio.onrender.com</p>
         </footer>
     </div>
 
