--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -19,7 +19,7 @@
 <body>
     <div class="root">
         <header class="header">
-            <a href="{{ url_for('main.index') }}" class="header-logo-link">
+            <a href="/" class="header-logo-link">
                 <img class="logo disabled"
                      src="{{ url_for('static', filename='image/logo.png') }}"
                      alt="uptrix Logo"
