--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -14,7 +14,7 @@
 
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 
-    <title>{{ title }} - uptrix.io</title>
+    <title>{{ title }}</title>
 </head>
 <body>
     <div class="root">
