--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1 class="page-title">Последние записи</h1>
+    <h1 class="page-title">Последние посты</h1>
     
     {% if posts %}
         {% for post in posts %}
