--- a/app/templates/post_view.html
+++ b/app/templates/post_view.html
@@ -18,6 +18,6 @@
         {% endif %}
 
         <hr>
-        <a href="/">Назад ко всем записям =></a>
+        <a href="/">Назад ко всем постам =></a>
     </article>
 {% endblock %}
