--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -95,6 +95,10 @@ body {
     flex-grow: 1;
 }
 
+.page-title {
+    color: #e2e2e2;
+}
+
 h1, h2, h3, h4, h5, h6 {
     font-family: "JetBrains", monospace;
     font-weight: bold;
