--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -5,7 +5,7 @@
     {% if posts %}
         {% for p in posts %}
             <article class="post-preview">
-                <h2><a href="{{ url_for('main.view_post', slug=p.slug) }}">{{ p.title }}</a></h2>
+                <h2><a href="{{ url_for('main.view_post', slug=p.slug) }}" class="post-title">{{ p.title }}</a></h2>
                 <div class="post-meta-extra">
                     <span class="post-meta">Опубликовано: {{ p.timestamp.strftime('%d-%m-%Y %H:%M') }}</span>
                      <span class="post-stats">
