--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
+    const csrfToken = document.querySelector('meta[name="csrf-token"]').getAttribute('content');
+    
     <link rel="icon" type="image/png" href="{{ url_for('static', filename='logo/favicon-96x96.png') }}" sizes="96x96" />
     <link rel="icon" type="image/svg+xml" href="{{ url_for('static', filename='logo/favicon.svg') }}" />
     <link rel="shortcut icon" href="{{ url_for('static', filename='logo/favicon.ico') }}" />
